# AgenticCodingAssistant

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  architecture.excalidraw  coding_agent_architecture.drawio  coding_agent_architecture.excalidraw.json
src/coding/: README.md  VERIFICATION.md  coding_agent.py  hello.py  optimizations.py  pyproject.toml  requirements.txt  run_cli.py  test_verification.py
src/deepagents/backends/: composite.py  filesystem.py  protocol.py  state.py  utils.py
src/deepagents/middleware/: filesystem.py
